Mise à jour graphique

--- a/src/Tm/TeambuilderBundle/Resources/config/routing.yml
+++ b/src/Tm/TeambuilderBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+tm_teambuilder_index:
+    path:  /
+    defaults: { _controller: TmTeambuilderBundle:Teambuilder:index }
+
 tm_teambuilder_champion_lister:
     path:  /champion/lister
     defaults: { _controller: TmTeambuilderBundle:Teambuilder:listerchampion }
@@ -99,5 +103,5 @@ tm_teambuilder_regle_appliquer:
     defaults: { _controller: TmTeambuilderBundle:Teambuilder:appliquerregles }
 
 tm_teambuilder_ajax_recherchechampion:
-    path:  /ajax/getsuggestionchampion
+    path:  /regle/getsuggestionchampion
     defaults: { _controller: TmTeambuilderBundle:Teambuilder:getsuggestionchampionajax }
