--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,29 @@
+tm_user:
+    resource: "@TmUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 tm_teambuilder:
     resource: "@TmTeambuilderBundle/Resources/config/routing.yml"
     prefix:   /teambuilder
 
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
+
+gregwar_captcha_routing:
+    resource: "@GregwarCaptchaBundle/Resources/config/routing/routing.yml"
