--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+		"friendsofsymfony/user-bundle": "~2.0@dev",
+		"gregwar/captcha-bundle": "dev-master"
     },
 	"require-dev": {
 		"phpspec/phpspec": "~2.0"
