Modification de la méthode isOptimale

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,8 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: parameters.php }
     - { resource: security.yml }
+
 
 framework:
     #esi:             ~
