Fix référence security.yml > security.php

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,7 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: parameters.php }
-    - { resource: security.yml }
+    - { resource: security.php }
 
 
 framework:
